--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -4,12 +4,12 @@
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="field">
-    <%= f.label :name %><br />
+    <%= f.label :name %><br>
     <%= f.text_field :name, autofocus: true, autocomplete: "name" %>
   </div>
 
   <div class="field">
-    <%= f.label :email %><br />
+    <%= f.label :email %><br>
     <%= f.email_field :email, autocomplete: "email" %>
   </div>
 
@@ -18,51 +18,51 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :postcode %><br />
+    <%= f.label :postcode %><br>
     <%= f.text_field :postcode, autocomplete: "postal-code" %>
   </div>
 
   <div class="field">
-    <%= f.label :prefecture %><br />
+    <%= f.label :prefecture %><br>
     <%= f.text_field :prefecture %>
   </div>
 
   <div class="field">
-    <%= f.label :address_city %><br />
+    <%= f.label :address_city %><br>
     <%= f.text_field :address_city %>
   </div>
 
   <div class="field">
-    <%= f.label :address_street %><br />
+    <%= f.label :address_street %><br>
     <%= f.text_field :address_street %>
   </div>
 
   <div class="field">
-    <%= f.label :address_building %><br />
+    <%= f.label :address_building %><br>
     <%= f.text_field :address_building %>
   </div>
 
   <div class="field">
-    <%= f.label :profile %><br />
+    <%= f.label :profile %><br>
     <%= f.text_area :profile %>
   </div>
 
   <div class="field">
-    <%= f.label :password %> <i>(<%= t('.leave_blank_if_you_don_t_want_to_change_it') %>)</i><br />
+    <%= f.label :password %> <i>(<%= t('.leave_blank_if_you_don_t_want_to_change_it') %>)</i><br>
     <%= f.password_field :password, autocomplete: "new-password" %>
     <% if @minimum_password_length %>
-      <br />
+      <br>
       <em><%= t('devise.shared.minimum_password_length', count: @minimum_password_length) %></em>
     <% end %>
   </div>
 
   <div class="field">
-    <%= f.label :password_confirmation %><br />
+    <%= f.label :password_confirmation %><br>
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
 
   <div class="field">
-    <%= f.label :current_password %> <i>(<%= t('.we_need_your_current_password_to_confirm_your_changes') %>)</i><br />
+    <%= f.label :current_password %> <i>(<%= t('.we_need_your_current_password_to_confirm_your_changes') %>)</i><br>
     <%= f.password_field :current_password, autocomplete: "current-password" %>
   </div>
 
