setup picture_uploader

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -47,6 +47,11 @@
     <%= f.text_area :profile %>
   </div>
 
+  <div>
+    <%= f.label :picture %>
+    <%= f.file_field :picture %>
+  </div>
+
   <div class="field">
     <%= f.label :password %> <i>(<%= t('.leave_blank_if_you_don_t_want_to_change_it') %>)</i><br>
     <%= f.password_field :password, autocomplete: "new-password" %>
