--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -43,6 +43,11 @@
     <%= f.text_area :profile %>
   </div>
 
+  <div>
+    <%= f.label :picture %>
+    <%= f.file_field :picture %>
+  </div>
+
   <div class="field">
     <%= f.label :password %>
     <% if @minimum_password_length %>
